--- a/app/src/main/res/layout/activity_student_login.xml
+++ b/app/src/main/res/layout/activity_student_login.xml
@@ -27,7 +27,7 @@
         app:layout_constraintTop_toBottomOf="@+id/topview2" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/logo2"
         android:layout_width="108dp"
         android:layout_height="101dp"
         android:layout_marginTop="32dp"
@@ -50,7 +50,7 @@
         android:textColor="@color/white"
         android:textSize="34sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/imageView2"
+        app:layout_constraintEnd_toStartOf="@+id/logo2"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/topview2" />
@@ -65,7 +65,7 @@
         android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/imageView2"
+        app:layout_constraintEnd_toStartOf="@+id/logo2"
         app:layout_constraintHorizontal_bias="0.206"
         app:layout_constraintStart_toStartOf="@+id/topview2"
         app:layout_constraintTop_toTopOf="@+id/topview2" />
